For a detailed view of what has changed, refer to the {uri-repo}/commits/master[commit history] on GitHub.

== Unreleased

Bug Fixes::

  * Don't allow counter and counter2 attribute directives to override locked attributes (#3939)
  * Fix crash when resolving next value in sequence for counter with non-numeric value (#3940)
  * Update default stylesheet to remove dash in front of cite on nested quote block (#3847)
  * Don't escape hyphen in manname in man page output
  * Remove extra .sp before content of verse block in man page output
  * Fix layout of footnotes in man page output (#3989)
  * Fix formatting of footnote text with URL in man page output (#3988)
  * Remove redundant trailing space on URL followed by non-adjacent text in man page output (#4004)
  * Use .bp macro at location of page break in man page output (#3992)

Improvements::

  * Extract method to create lexer and formatter in Rouge adapter (#3953) (*@Oblomov*)
  * Add support for pygments.rb 2.x (#3969) (*@slonopotamus*)
  * Allow NullLogger to be enabled by setting the `:logger` option to a falsy value (#3982)
  * Substitute attributes in manpurpose in NAME section of man page (#4000)

Build / Infrastructure::

  * Import documentation for processor into this repository (#3861) (*@graphitefriction*)
  * Run tests against both pygments.rb 1.x and 2.x (#3969) (*@slonopotamus*)

Documentation::

  * add Belarusian translation of built-in attributes (PR #3928) (*@morganov*)

// tag::compact[]
== 2.0.12 (2020-11-10) - @mojavelinux

Bug Fixes::

  * Set type and target property on unresolved footnote reference and unset id property (fixes regression) (#3825)
  * Fix crash when inlining an SVG if the explicit width or height value on the image node is not a string (#3829)
  * Reset word wrap behavior to normal on tables, then reenable again for admonition content, horizontal dlist description, and AsciiDoc table cells (#3833)

Improvements::
